Added Slalom @ Dreamforce section

--- a/_posts/2017-11-14-dreamforce-2017.md
+++ b/_posts/2017-11-14-dreamforce-2017.md
@@ -8,11 +8,15 @@ meta:
   _edit_last: '1'
 ---
 
-![Me and John Berkin up DF creek - with a paddle!](/images/DF17.jpg "Me and John Berkin up DF creek - with a paddle!")
+![Me, Daniela, Ashley and Brittany working the Slalom Booth](/images/Slalom_DF_Booth.jpg "Me, Daniela, Ashley and Brittany working the Slalom Booth")
 
 ## Familiar territory
 
 The 4th of November 2017 marked the day I boarded a plane and flew to San Francisco ([Virgin Atlantic](https://www.virginatlantic.com/), as per usual the service was superb). A month later in the year compared to last year, [Dreamforce 2017](https://www.salesforce.com/dreamforce/) promised to offer more product announcements and innovation than last year. I was fortunate enough to get a day to experience a little tourism (which took me on a cycle ride to [Sausalito](http://www.sausalito.gov/) for a pizza and beer at [Bar Bocce](http://www.barbocce.com/)) before settling into the conference proper for the week.
+
+## Slalom @ Dreamforce 2017
+
+[Slalom](https://www.slalom.com) had a booth at the Dreamforce Expo this year. I was fortunate enough to represent Slalom a couple of times on the booth during the week, and thoroughly enjoyed my time talking about our mission to implement Salesforce ourselves, and discuss both recruitment and other partnership opportunities. If you didn't know already, [Slalom are hiring](https://slalom.secure.force.com/careers)!
 
 ## The fourth industrial revolution
 
@@ -80,3 +84,5 @@ At the Salesforce Platform keynote, the Force.com platform is now being re-brand
 ## Until next year!
 
 Dreamforce 2017 was a blast! I'm feeling excited about the new features of Einstein, IoT and Heroku in particular - so much so I'm hacking away on an idea already!
+
+![Me and John Berkin up DF creek - with a paddle!](/images/DF17.jpg "Me and John Berkin up DF creek - with a paddle!")
